syntax = "proto3";

import "google/api/annotations.proto";
import "com/okue/demo/midori/grpc/common/result.proto";

package com.okue.demo.midori.grpc.service;
option java_package = "com.okue.demo.midori.grpc.service";
option java_multiple_files = true;

service Booking {
    rpc bookingList (BookingListRequest) returns (BookingListResponse) {
        option (google.api.http) = {
            get: "/v1/api/reserve/{id}"
        };
    }
}

message BookingListRequest {
    string id = 1;
}

message BookingListResponse {
    repeated string name = 1;
    com.okue.demo.midori.grpc.common.Result result = 2;
}
